docker/lesson_5/pod-with-configmap.yaml
apiVersion: v1
kind: Pod
metadata:
  name: configmap-test-pod
spec:
  containers:
    - name: test-container
      image: busybox
      command: ["sh", "-c", "env | grep APP_ && sleep 3600"]
