docker/lesson_5/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-web-service
spec:
  type: ClusterIP
  selector:
    app: demo-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
